--- a/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
+++ b/libs/client/athlete-profile/feature/src/lib/athleteprofile/athleteprofile.component.html
@@ -3,7 +3,7 @@
   <training-buddy-unsigned-navbar *ngIf="!update"></training-buddy-unsigned-navbar>
   <training-buddy-back-navbar *ngIf="update" title="Activity Settings"></training-buddy-back-navbar>
   
-  <mat-grid-list cols="1" rows="1" rowHeight="2:1">
+  <mat-grid-list cols="1" rows="1" rowHeight="2:1" [@fadeIn]>
   
       <mat-card>
   
