--- a/libs/client/changepassword/feature/src/lib/changepassword/changepassword.component.html
+++ b/libs/client/changepassword/feature/src/lib/changepassword/changepassword.component.html
@@ -1,6 +1,6 @@
 <training-buddy-back-navbar title="Change Password"></training-buddy-back-navbar>
 
-    <mat-grid-list cols="1" rows="1" rowHeight="2:1">
+    <mat-grid-list cols="1" rows="1" rowHeight="2:1" [@fadeIn]>
 
             <mat-card>
 
