--- a/libs/client/editprofile/feature/src/lib/editprofilepage/editprofilepage.component.html
+++ b/libs/client/editprofile/feature/src/lib/editprofilepage/editprofilepage.component.html
@@ -3,7 +3,7 @@
 
     <training-buddy-back-navbar title="Edit Profile"></training-buddy-back-navbar>
 
-    <mat-grid-list cols="1" rows="1" rowHeight="2:1">
+    <mat-grid-list cols="1" rows="1" rowHeight="2:1" [@fadeIn]>
         <mat-card>
            
             <!-- <figure class="relative flex flex-col-reverse bg-zinc-900 rounded-lg p-6 darkbg-zinc-900 dark:highlight-white/5">
