--- a/libs/client/settings/feature/src/lib/settings/settings.component.html
+++ b/libs/client/settings/feature/src/lib/settings/settings.component.html
@@ -36,7 +36,7 @@
             </div>
         </div> -->
       
-        <mat-card-content>
+        <mat-card-content [@fadeIn]>
 
             <!-- <div class="flex"> -->
                 <!-- <mat-icon routerLink="/profile" class="flex-none">arrow_back_ios</mat-icon> -->
