--- a/libs/client/viewprofile/feature/src/lib/loglist/loglist.component.html
+++ b/libs/client/viewprofile/feature/src/lib/loglist/loglist.component.html
@@ -1,6 +1,16 @@
+<div *ngIf="!loading" [@fadeIn]>
 
+    <mat-form-field class="mt-3" appearance="outline">
+        <mat-label>Search</mat-label>
+        <input id="search" matInput placeholder="Afternoon Run..." name="search">
+    </mat-form-field>
 
+    <div *ngFor="let log of logList">
+        {{log}}
+    </div>
 
+</div>
 
+<div *ngIf="loading" class="spinner mt-6" [@fadeIn]><mat-spinner></mat-spinner></div>
 
-<pre>{{ logList | json }}</pre>
+<!-- <pre>{{ logList | json }}</pre> -->
