--- a/libs/client/viewprofile/feature/src/lib/buddylist/buddylist.component.html
+++ b/libs/client/viewprofile/feature/src/lib/buddylist/buddylist.component.html
@@ -1,2 +1,45 @@
-<p>buddylist works!</p>
-more here
+<div *ngIf="!loading" [@fadeIn]>
+
+    <mat-form-field class="mt-3" appearance="outline">
+        <mat-label>Search</mat-label>
+        <input id="search" matInput placeholder="Afternoon Run..." name="search" (focus)="showClear()" (blur)="hideClear()" #inputbox (input)="search(inputbox)">
+        <button mat-button matSuffix mat-icon-button aria-label="Clear" (click)="hideClear()" *ngIf="clearbutton">
+            <mat-icon>close</mat-icon>
+        </button>
+    </mat-form-field>
+
+    <div *ngFor="let buddy of buddies" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+
+        <div class="m-3 row space-between align-content">
+            <!-- <div class="flex justify-around">
+                <h4><strong>{{ ac.name }}</strong></h4>
+                <h4>{{ ac.type }}</h4>
+                <h4>{{ ac.date }}</h4>
+            </div>
+            <div class="flex justify-between">
+                <h4>{{ ac.time }}</h4>
+                <h4>{{ ac.distance }}</h4>
+                <h4>{{ ac.speed }}</h4>
+            </div> -->
+
+            <div class="row align-content cursor" routerLink="{{ buddy.userName }}">
+                <div class="my-2 buddypic" [ngStyle]="{'background-image': 'url(' + currentImage + ')'}"></div>
+                <div class="ml-6">
+                    <div><h2>{{ buddy?.userName }} {{ buddy?.userSurname }}</h2></div>
+                    <div><mat-hint>{{ buddy?.location }}</mat-hint></div>
+                </div>
+            </div>
+
+            <div>
+                <button class="text-center mx-5 button" (click)="openSheet()"><mat-icon>more_horiz</mat-icon></button>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
+
+<div *ngIf="loading" class="spinner my-6" [@fadeIn]><mat-spinner></mat-spinner></div>
+
+<!-- <pre>{{ logList | json }}</pre> -->
