--- a/libs/client/viewprofile/feature/src/lib/loglist/loglist.component.html
+++ b/libs/client/viewprofile/feature/src/lib/loglist/loglist.component.html
@@ -2,15 +2,31 @@
 
     <mat-form-field class="mt-3" appearance="outline">
         <mat-label>Search</mat-label>
-        <input id="search" matInput placeholder="Afternoon Run..." name="search">
+        <input id="search" matInput placeholder="Afternoon Run..." name="search" (focus)="showClear()" (blur)="hideClear()" #inputbox (input)="search(inputbox)">
+        <button mat-button matSuffix mat-icon-button aria-label="Clear" (click)="hideClear()" *ngIf="clearbutton">
+            <mat-icon>close</mat-icon>
+        </button>
     </mat-form-field>
 
-    <div *ngFor="let log of logList">
-        {{log}}
+    <div *ngFor="let ac of logList" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+
+        <div class="m-3">
+            <div class="flex justify-around">
+                <h4><strong>{{ ac.name }}</strong></h4>
+                <h4>{{ ac.type }}</h4>
+                <h4>{{ ac.date }}</h4>
+            </div>
+            <div class="flex justify-between">
+                <h4>{{ ac.time }}</h4>
+                <h4>{{ ac.distance }}</h4>
+                <h4>{{ ac.speed }}</h4>
+            </div>
+        </div>
+
     </div>
 
 </div>
 
-<div *ngIf="loading" class="spinner mt-6" [@fadeIn]><mat-spinner></mat-spinner></div>
+<div *ngIf="loading" class="spinner my-6" [@fadeIn]><mat-spinner></mat-spinner></div>
 
 <!-- <pre>{{ logList | json }}</pre> -->
