working single view user page

--- a/libs/client/addmanualactivity/feature/src/lib/addmanualactivity/addmanualactivity.component.html
+++ b/libs/client/addmanualactivity/feature/src/lib/addmanualactivity/addmanualactivity.component.html
@@ -1,6 +1,7 @@
 <!-- <div id="background" [ngStyle]="{'background-image': 'url(' + img + ')'}"> -->
 
-    <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
+    <!-- <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar> -->
+    <training-buddy-back-navbar title="Add Activity"></training-buddy-back-navbar>
     
     <mat-grid-list cols="1" rows="1" rowHeight="2:1" >
     
@@ -10,7 +11,7 @@
     
               <form [formGroup]="manualForm">
     
-                <h1 class="text-center">Add Activity Entry</h1>
+                <!-- <h1 class="text-center">Add Activity Entry</h1> -->
 
                 <!-- activity name -->
                 <mat-form-field appearance="outline">
