--- a/libs/client/viewprofile/feature/src/lib/buddylist/buddylist.component.html
+++ b/libs/client/viewprofile/feature/src/lib/buddylist/buddylist.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="!loading && !nobuddies" [@fadeIn]>
+<div *ngIf="!nobuddies" [@fadeIn]>
 
     <mat-form-field class="mt-3" appearance="outline">
         <mat-label>Search</mat-label>
         <input id="search" matInput placeholder="Afternoon Run..." name="search" (focus)="showClear()" (blur)="hideClear()" #inputbox (input)="search(inputbox)">
-        <button mat-button matSuffix mat-icon-button aria-label="Clear" (click)="hideClear()" *ngIf="clearbutton">
+        <button mat-button matSuffix mat-icon-button aria-label="Clear" (click)="clearSearch()" *ngIf="clearbutton">
             <mat-icon>close</mat-icon>
         </button>
     </mat-form-field>
@@ -11,16 +11,6 @@
     <div *ngFor="let buddy of buddies" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
 
         <div class="m-3 row space-between align-content">
-            <!-- <div class="flex justify-around">
-                <h4><strong>{{ ac.name }}</strong></h4>
-                <h4>{{ ac.type }}</h4>
-                <h4>{{ ac.date }}</h4>
-            </div>
-            <div class="flex justify-between">
-                <h4>{{ ac.time }}</h4>
-                <h4>{{ ac.distance }}</h4>
-                <h4>{{ ac.speed }}</h4>
-            </div> -->
 
             <div class="row align-content cursor" (click)="viewOtherProfile(buddy.id)">
                 <div class="my-2 buddypic" [ngStyle]="{'background-image': 'url(' + currentImage + ')'}"></div>
@@ -31,21 +21,24 @@
             </div>
 
             <div>
-                <button class="text-center mx-5 button" (click)="openSheet()"><mat-icon *ngIf="checkSelf()">more_horiz</mat-icon></button>
+                <button class="text-center mx-5 button" (click)="openSheet()"><mat-icon *ngIf="checkSelf(buddy.id)">more_horiz</mat-icon></button>
             </div>
 
         </div>
 
     </div>
 
+    <div *ngIf="noresult">
+        <mat-hint>No activity found</mat-hint>
+    </div>
+
 </div>
 
-<div *ngIf="!loading && nobuddies" class="my-6">
+<div *ngIf="nobuddies" class="my-6">
     <mat-hint class="text-center">No Buddies</mat-hint>
     <br />
     <mat-hint class="text-center">Send some invites to your </mat-hint><a id="configurelink" routerLink="/dashboard"><u>Recommended Buddies</u></a>
 </div>
 
-<div *ngIf="loading" class="spinner my-6" [@fadeIn]><mat-spinner></mat-spinner></div>
 
 <!-- <pre>{{ logList | json }}</pre> -->
