--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -1,6 +1,6 @@
 <!-- <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar> -->
-<training-buddy-settings-navbar *ngIf="!guestprofile"></training-buddy-settings-navbar>
-<training-buddy-back-navbar *ngIf="guestprofile"></training-buddy-back-navbar>
+<training-buddy-settings-navbar *ngIf="currentProfile()"></training-buddy-settings-navbar>
+<training-buddy-back-navbar title="Training Buddy" *ngIf="!currentProfile()"></training-buddy-back-navbar>
 
     <div *ngIf="loading" class="spinner" id="pagespinner"><mat-spinner></mat-spinner></div>
 
@@ -63,9 +63,98 @@
     
                     <!-- child components -->
                     <div class="padding">
-                        <training-buddy-buddies-list *ngIf="toggle && buddyLoadComp" data="{{ buddies }}" [@fadeIn]></training-buddy-buddies-list>
-                        <training-buddy-log-list *ngIf="!toggle && logLoadComp" data="{{ logs }}" [@fadeIn]></training-buddy-log-list>
-                        <div *ngIf="!buddyLoadComp && !logLoadComp" class="spinner" id="childspinner" [@fadeIn]><mat-spinner></mat-spinner></div>
+                        <!-- <training-buddy-buddies-list *ngIf="toggle" [observable]="eventBuddies.asObservable()" [@fadeIn]></training-buddy-buddies-list> -->
+                        <!-- <training-buddy-log-list *ngIf="!toggle" [observable]="eventLogs.asObservable()" [@fadeIn]></training-buddy-log-list> -->
+                        <!-- <div *ngIf="!buddyLoadComp && !logLoadComp" class="spinner" id="childspinner" [@fadeIn]><mat-spinner></mat-spinner></div> -->
+
+
+                        <!-- buddy component -->
+                        <ng-container *ngIf="toggle">
+                            <div *ngIf="!noBuddies && buddiesLoaded" [@fadeIn]>
+                                <mat-form-field class="mt-3" appearance="outline">
+                                    <mat-label>Search</mat-label>
+                                    <input id="search" matInput placeholder="Afternoon Run..." name="search" (focus)="showBuddiesClear()" (blur)="hideBuddiesClear()" #buddySearchBox (input)="searchBuddies(buddySearchBox)">
+                                    <button mat-button matSuffix mat-icon-button aria-label="Clear" (click)="clearBuddiesSearch()" *ngIf="clearBuddiesbutton">
+                                        <mat-icon>close</mat-icon>
+                                    </button>
+                                </mat-form-field>
+                            
+                                <div *ngFor="let buddy of buddies" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+                            
+                                    <div class="m-3 row space-between align-content">
+                            
+                                        <div class="row align-content cursor" (click)="changeProfile(buddy.id)">
+                                            <div class="my-2 buddypic" [ngStyle]="{'background-image': 'url(' + currentImage + ')'}"></div>
+                                            <div class="ml-6">
+                                                <div><h2>{{ buddy?.userName }} {{ buddy?.userSurname }}</h2></div>
+                                                <div><mat-hint>{{ buddy?.location }}</mat-hint></div>
+                                            </div>
+                                        </div>
+                            
+                                        <div>
+                                            <button class="text-center mx-5 button" (click)="openSheet(buddy)"><mat-icon *ngIf="checkSelf(buddy.id)">more_horiz</mat-icon></button>
+                                        </div>
+                            
+                                    </div>
+                            
+                                </div>
+                            
+                            </div>
+                            
+                            <div *ngIf="noBuddiesResult || noBuddies" class="my-6">
+                                <mat-hint class="text-center">No Buddies</mat-hint>
+                                <br />
+                                <mat-hint class="text-center" *ngIf="currentProfile()">Send some invites to your </mat-hint><a id="configurelink" routerLink="/dashboard"><u>Recommended Buddies</u></a>
+                            </div>
+
+                            <div *ngIf="!buddiesLoaded" class="spinner" id="childspinner" [@fadeIn]><mat-spinner></mat-spinner></div>
+
+                        </ng-container>
+
+                        <!-- log component -->
+                        <ng-container *ngIf="!toggle">
+                            <div *ngIf="!noLogs && logsLoaded" [@fadeIn]>
+
+                                <mat-form-field class="mt-3" appearance="outline">
+                                    <mat-label>Search</mat-label>
+                                    <input id="search" matInput placeholder="Afternoon Run..." name="search" (focus)="showLogsClear()" (blur)="hideLogsClear()" #logSearchBox (input)="searchLogs(logSearchBox)">
+                                    <button mat-button matSuffix mat-icon-button aria-label="Clear" (click)="hideLogsClear()" *ngIf="clearLogsbutton">
+                                        <mat-icon>close</mat-icon>
+                                    </button>
+                                </mat-form-field>
+                            
+                                <div *ngFor="let log of logs" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+                            
+                                    <div class="m-3">
+                                        <div class="flex justify-around">
+                                            <h4><strong>{{ log.name }}</strong></h4>
+                                            <h4>{{ log.type }}</h4>
+                                            <h4>{{ log.date }}</h4>
+                                        </div>
+                                        <div class="flex justify-between">
+                                            <h4>{{ log.time }}</h4>
+                                            <h4>{{ log.distance }}</h4>
+                                            <h4>{{ log.speed }}</h4>
+                                        </div>
+                                    </div>
+                            
+                                </div>
+                            
+                            </div>
+                            
+                            <div *ngIf="noLogsResult || noLogs" class="my-6">
+                                <mat-hint class="text-center">No Activities</mat-hint>
+                                <br />
+                                <ng-container *ngIf="currentProfile()">
+                                    <mat-hint class="text-center">Record an activity on Strava or </mat-hint><a id="configurelink" routerLink="/addactivity"><u>Add Activity</u></a>
+                                </ng-container>
+                            </div>
+
+                            <div *ngIf="!logsLoaded" class="spinner" id="childspinner" [@fadeIn]><mat-spinner></mat-spinner></div>
+
+                        </ng-container>
+
+
                     </div>
         
                 <!-- </mat-card-content> -->
