--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
@@ -1,6 +1,6 @@
 <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
 
-<h1 class="text-center">Schedule here</h1>
+<h1 class="text-center">Up Comming Workouts</h1>
 
 <div>
     <button id="addbutton" [routerLink]="['../scheduleworkout']" mat-fab>
