--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
@@ -5,7 +5,14 @@
 <div *ngIf="!upcomingEvents" class="my-6">
     <mat-hint class="text-center">No events scheduled</mat-hint>
 </div>
-
+<mat-card>
+    <mat-card-title>Event name</mat-card-title>
+    <mat-card-subtitle>Time: 19:30 Location:Mcdonanld</mat-card-subtitle>
+    <mat-card-actions>
+      <button mat-button>LIKE</button>
+      <button mat-button>SHARE</button>
+    </mat-card-actions>
+</mat-card>
 <div>
     <button id="addbutton" [routerLink]="['../scheduleworkout']" mat-fab>
         <mat-icon>add</mat-icon>
