💅🏾css for location

--- a/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.scss
+++ b/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.scss
@@ -9,7 +9,11 @@ mat-card {
     transform: translate(-50%, -0%);
     background-color: rgba(255, 255, 255, 1);
 }
-
+// powered by google
+.b { color: #4285F4; }
+.r { color: #EA4335; }
+.y { color: #FBBC05; }
+.g { color: #34A853; }
 .text-center {
     text-align: center;
 }
