--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
@@ -1,5 +1,5 @@
 <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
-<!-- <div *ngIf="loading" class="spinner" id="pagespinner"><mat-spinner></mat-spinner></div> -->
+<div *ngIf="loading" class="spinner" id="pagespinner"><mat-spinner></mat-spinner></div>
 <h1 class="text-center">Up Comming Workouts</h1>
 
 <div *ngIf="!upcomingEvents" class="my-6">
