--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
@@ -13,7 +13,7 @@
             <div class="row align-content cursor" >
                 <div class="my-2 eventpic" [ngStyle]="{'background-image': 'url(' +  workout?.image + ')'}"></div>
                 <div class="ml-6">
-                    <div><h2>{{ workout?.name }} {{workout?.startDate}} {{ workout?.startTime }}</h2></div>
+                    <div><h2>{{ workout?.name }} {{workout?.startDate.day}} {{workout?.startDate.month}} {{workout?.startDate.hour}}:{{workout?.startDate.minutes}}</h2></div>
                     <div><mat-hint>{{ workout?.startPoint }}</mat-hint></div>
                 </div>
             </div>
