--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
@@ -1,6 +1,5 @@
 <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar>
 
-<h1 class="text-center">Up Comming Workouts</h1>
 <div *ngIf="loading" class="spinner" id="pagespinner"><mat-spinner></mat-spinner></div>
 <div *ngIf="!loading"> 
     <div *ngIf="!upcomingEvents" class="my-6">
@@ -24,27 +23,33 @@
     <div>
         <!-- for date -->
         <div *ngFor="let day of workouts">
-            <div>
-                {{day[0]?.startDate.day}} {{day[0]?.startDate.month}}
+            <div class="text-center ">
+                <h2>
+                    {{day[0]?.startDate.day}} {{day[0]?.startDate.month}}
+                </h2>
+
             </div>
-            <div *ngFor="let workout of day" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
+            <div *ngFor="let workout of day" class="mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3 mb-3">
                             
                 <div class="m-3 row space-between align-content">
         
                     <div class="row align-content cursor" >
                         <div class="my-2 eventpic" [ngStyle]="{'background-image': 'url(' +  workout?.image + ')'}"></div>
                         <div class="ml-6">
-                            <div><h2>{{ workout?.name }} {{workout?.startDate.day}} {{workout?.startDate.month}} {{workout?.startDate.hour}}:{{workout?.startDate.minutes}}</h2></div>
-                            <div><mat-hint>{{ workout?.startPoint }}</mat-hint></div>
+                            <div><h2>{{ workout?.name }} </h2></div>
+                            <div> 
+                            <mat-hint>
+                                {{workout?.startDate.hour}}:{{workout?.startDate.minutes}} <br>
+                                <mat-icon> location_on</mat-icon>{{ workout?.startPoint }}
+                            </mat-hint>
+                            </div>
                         </div>
                     </div>
         
                 </div>
-        
             </div>
         </div>
-        <!-- for workouts on date -->
-        <div></div>
+      
     </div>
         <button id="addbutton" [routerLink]="['../scheduleworkout']" mat-fab>
             <mat-icon>add</mat-icon>
