🐛 fix title of schedule workout

--- a/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.html
+++ b/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.html
@@ -2,7 +2,7 @@
 
     <!-- <training-buddy-unsigned-navbar></training-buddy-unsigned-navbar> -->
 
-    <training-buddy-back-navbar title="Add Activity"></training-buddy-back-navbar>
+    <training-buddy-back-navbar title="Schedule workout"></training-buddy-back-navbar>
     
     <mat-grid-list cols="1" rows="1" rowHeight="2:1">
     
