--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.scss
@@ -1,7 +1,7 @@
 #addbutton {
     background-color: #1b1a1b !important;
-    position: absolute;
-    top: 84%;
+    position: fixed;
+    top: 80%;
     left: 80%;
 }
 
