Optimistic requests on dashboard

--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
@@ -7,6 +7,7 @@
             <div id="incomingRequests" class="m-8" *ngIf="doneloading">
     
                 <h1 *ngIf="pendingrequests" class="text-center">Incoming Requests</h1>
+                
                 <ng-container>
                     <div *ngFor="let usr of requests" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl mt-3">
                         <div class="md:flex">
@@ -55,13 +56,13 @@
                 <ng-container *ngIf="doneloading">
 
                     <div *ngFor="let usr of buddies" class="mb-5 max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden md:max-w-2xl">
-                        <div class="md:flex cursor" routerLink="/profile/{{usr.id}}">
+                        <div class="md:flex cursor">
                             <div class="md:shrink-0">
-                                <img class="h-48 w-full object-cover md:h-full md:w-48" src="https://github.com/COS301-SE-2022/Training-Buddy/blob/develop/libs/client/shared/assets/stockImages/1.jpg?raw=true">
+                                <img routerLink="/profile/{{usr.id}}" class="h-48 w-full object-cover md:h-full md:w-48" src="https://github.com/COS301-SE-2022/Training-Buddy/blob/develop/libs/client/shared/assets/stockImages/1.jpg?raw=true">
                             </div>
                             <div class="mx-4 mb-3 mt-2">
                                 <div class="acceptTitle">
-                                    <p class="block mt-1 text-2xl leading-tight font-medium text-black">{{ usr.userName }} {{ usr.userSurname }}</p> 
+                                    <p class="block mt-1 text-2xl leading-tight font-medium text-black" routerLink="/profile/{{usr.id}}">{{ usr.userName }} {{ usr.userSurname }}</p> 
                                     <div>
                                         <button *ngIf="!checkIfInOutgoing(usr.email)" (click)="sendRequest(usr.email)" mat-raised-button>Request</button>
                                         <button *ngIf="checkIfInOutgoing(usr.email)" mat-raised-button disabled>Pending</button>
