--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
@@ -2,7 +2,7 @@
 
 <div *ngIf="loading" class="spinner" id="pagespinner"><mat-spinner></mat-spinner></div>
 <div *ngIf="!loading"> 
-    <div *ngIf="!upcomingEvents" class="my-6">
+    <div *ngIf="!upcomingEvents && !invitesAvailable" class="my-6">
         <mat-hint class="text-center">No workouts scheduled</mat-hint>
     </div>
     <!-- <div *ngFor="let workout of workouts" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3">
@@ -20,6 +20,9 @@
         </div>
 
     </div> -->
+    <div *ngIf="invitesAvailable">
+        workout invites available.
+    </div>
     <div class="px-4">
         <!-- for date -->
         <div *ngFor="let day of workouts">
@@ -29,7 +32,7 @@
                 </h2>
 
             </div>
-            <div *ngFor="let workout of day" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3" (click)="fullWorkoutDetails()">
+            <div *ngFor="let workout of day" class="max-w-md mx-auto bg-white rounded-xl shadow-md overflow-hidden max-w-2xl mt-3" (click)="fullWorkoutDetails(workout?.id)">
                             
                 <div class="m-3 row space-between align-content">
         
