🐛time bug fixed
#288

--- a/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
+++ b/libs/client/schedule/feature/src/lib/viewschedule/viewschedule.component.html
@@ -45,7 +45,7 @@
 
                             <mat-hint>
                                 {{workout?.organiser}} <br>
-                                {{workout?.startDate.hour}}:{{workout?.startDate.minutes}} <br>
+                                {{workout?.startDate.time}} <br>
                                 <mat-icon> location_on</mat-icon>{{ workout?.startPoint }}
                             </mat-hint>
                             </div>
@@ -84,7 +84,7 @@
                             <div><h2>{{ workout?.name }} </h2></div>
                             <div> 
                             <mat-hint>
-                                {{workout?.startDate.hour}}:{{workout?.startDate.minutes}} <br>
+                                {{workout?.startDate.time}} <br>
                                 <mat-icon> location_on</mat-icon>{{ workout?.startPoint }}
                             </mat-hint>
                             </div>
